--- a/skin/frontend/creo_mobile/default/css/custom.sami.css
+++ b/skin/frontend/creo_mobile/default/css/custom.sami.css
@@ -45,7 +45,7 @@
     font-size: 14px;
 } 
 
-.checkout-form .form-group {margin-bottom: 20px;padding:0;}
+.checkout-form .form-group {margin-bottom: 20px;}
 
 .checkout-form .form-group a {
     margin-bottom: 20px;
