--- a/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
@@ -57,7 +57,7 @@
     <div class="row">
       <div class="cart-table-area col col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <table id="shopping-cart-table" class="cart-table data-table">
-          <?php /*?>  <col width="1" />
+      <col width="1" />
       <col width="1" />
       <col width="1" />
       <col width="1" />
@@ -66,7 +66,7 @@
       <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
       <col width="1" />
       <col width="1" />
-      <?php endif; ?><?php */?>
+      <?php endif; ?>
           <?php $mergedCells = ($this->helper('tax')->displayCartBothPrices() ? 2 : 1); ?>
           <thead>
             <tr>
