collection dropdwon selection issue

--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1216,7 +1216,7 @@ a[class*='_selected_']{
     color: #fff !important;
 	background: #000;
 }
-.defaultSelect{
+._selected_{
     color: #fff !important;
 	background: #000;
 }
