onepagecheckout page changes done and other fixes

--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -503,8 +503,8 @@ width:49%;display:inline-block;vertical-align:top;}
 .cart-table-area .alignleft { float: left; width: 78px; margin: 0 10px 0 -1px; }
 .cart-table-area .alignleft img { display: block; width: 100%; height: auto; }
 .cart-table-area .text-area { overflow: hidden; }
-.cart-table-area h3{ margin:0 0 5px; text-transform: uppercase;font: 16px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
-text-align:center;font-weight:bold;background-color:#000;color:#fff;line-height:1.8; }
+.cart-table-area h3{margin:0 0 5px; text-transform:uppercase;font: 16px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+text-align:center;font-weight:bold;background-color:#000;color:#fff;line-height:1.2;padding:0;}
 .cart-table-area h3 a{color:#fff;}
 .cart-table-area dl{margin:10px 0;padding:0;display:block;color:#000;font:14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;}
 .checkout-cart-index .cart-table-area dl { float: left !important;width:70%}
