drop down changes

--- a/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
@@ -46,7 +46,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
                 <a href="<?php echo Mage::getBaseUrl() . "clothing.html/?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
             <?php else: 
 			?>
-            <a  class="fme_layered_clearall" href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a>
+            <a  class="fme_layered_clearall _selected_" href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a>
             <?php endif; ?>
         </li>
     <?php endforeach ?>
