--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1220,3 +1220,7 @@ a[class*='_selected_']{
     color: #fff !important;
 	background: #000;
 }
+.dont_click_it {
+   pointer-events: none;
+   cursor: default;
+}
