drop down categories conflict resolved

--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -33,7 +33,6 @@
 ?>
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
-
 ?>
 <div class="cate-drop-holder">
 <span class="search-by">Search By Design</span>
@@ -43,10 +42,10 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
             <?php if ($a['value']): ?>
-                <a href="<?php echo Mage::getBaseUrl() . "clothing.html/men.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
+                <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
             <?php else: 
 			?>
-            <a href="<?php echo Mage::getBaseUrl() . "clothing.html/men.html" ?>">View All</a>
+            <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html" ?>">View All</a>
             <?php endif; ?>
         </li>
     <?php endforeach ?>
@@ -224,7 +223,7 @@ $_helper = $this->helper('catalog/output');
 			?>
         <li>
 	            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
-				<a href="<?php echo Mage::getBaseUrl() . "clothing.html/men.html?universal_categories=".$a['value']."" ?>">
+				<a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a['value']."" ?>">
 				<?php if ($_img): ?>
                     <img src="<?php echo $this->escapeHtml($_img); ?>" alt="<?php echo $a['label']; ?>" />
                 <?php endif; ?>
