--- a/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
@@ -418,7 +418,7 @@ if($_product->stock_item->is_in_stock == 0){
             </div>
         </div>
     </div>   
-    <div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl(); ?>images/FME/ajax-loader.gif" /></div>
+    <div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl('images/FME/ajax-loader.gif'); ?>" /></div>
     <style>
         .fme_loading_filters {
             background-color: #d8d8d8;
