--- a/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
@@ -13,7 +13,7 @@ if ($this->getRequest()->getControllerName() != 'result') {
 
 if ('front' != Mage::app()->getRequest()->getControllerName()) {
     ?>
-    <script type="text/javascript" src="<?php echo $this->getSkinUrl(); ?>js/FME/fme_layered_nav.js"></script> 
+    <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/FME/fme_layered_nav.js'); ?>"></script> 
     <?php
 }
 ?>
@@ -35,9 +35,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                     <input type="hidden" id="fme_layered_params" value="<?php echo $this->htmlEscape($state[1]) ?>"/> 
                     <input type="hidden" id="fme_layered_ajax" value="<?php echo $this->htmlEscape($state[2]) ?>"/> 
                     <dl id="fme_filters_list">
-
-
-                        <?php $_filters = $this->getFilters(); 
+                        <?php $_filters = $this->getFilters();
                         ?>
                         <?php // $_filters = array_reverse($_filters); ?>
                         <?php foreach ($_filters as $_filter):?>
@@ -48,81 +46,81 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                   <?php endif ?>
                                   <?php echo $this->__($_filter->getName()) ?>
                                   </dt><?php */ ?>
-                                <?php
-								//print_r($_filter->getVar());
-								//print_r($_filter->getHtml());
-                                // hide men women filter in clothing category
-								if($current_category_p_id == '57' || $current_category_p_id == '58' || $current_category_p_id == '3' ){ 					
-									if ($_filter->getVar() == 'styles') {
-									?>
-										<label style="float:left !important;right:0px !important;" class="styles-lable" id="styles_label">Styles: </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd>
-									<?php } else if ($_filter->getVar() == 'tshirt_color') {
-									?>
-                                        <div class="tshirt-colors-area">
-										<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Tshirt Color(s): </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
-									<?php } else if ($_filter->getVar() == 'universal_categories') {
-									?>
-                                        <span id="search-by" class="search-by">Search By Design</span>
-                                        <div for="search-by" class="cate-open-close">
-                                        <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
-										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
+                <?php
+		//print_r($_filter->getVar());
+		//print_r($_filter->getHtml());
+                        // hide men women filter in clothing category
+                if($current_category_p_id == '57' || $current_category_p_id == '58' || $current_category_p_id == '3' ){ 
+                if ($_filter->getVar() == 'styles') {
+                ?>
+            <label style="float:left !important;right:0px !important;" class="styles-lable" id="styles_label">Styles: </label>
+            <dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd>
+                	<?php } else if ($_filter->getVar() == 'tshirt_color') {
+                	?>
+                        <div class="tshirt-colors-area">
+		<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Tshirt Color(s): </label>
+		<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
+    	       <?php } else if ($_filter->getVar() == 'universal_categories') {
+                    ?>
+                                       <span id="search-by" class="search-by">Search By Design</span>
+                                       <div for="search-by" class="cate-open-close">
+                                       <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
+			<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
+			<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
                                         <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
-										<?php echo $_filter->getHtml() ?>
+			<?php echo $_filter->getHtml() ?>
                                         </ul></div>
                                     <?php }
-								}else if($current_category_p_id != '57' || $current_category_p_id != '58'){
-									if ($_filter->getVar() == 'gender') {
-									?>
+			}else if($current_category_p_id != '57' || $current_category_p_id != '58'){
+				if ($_filter->getVar() == 'gender') {
+				?>
                                         <div class="gender-filter-area">
-										<label class="styles-lable" id="styles_label">Gender: </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd></div>
-									<?php
-									}
-									else if ($_filter->getVar() == 'styles') {
-									?>
-										<label class="styles-lable" id="styles_label">Styles: </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd>
-									<?php } else if ($_filter->getVar() == 'acc_phone_model') {
-									?>
-                                        <div class="cate-open-close">
-                                        <a class="opener" href="javascript:void(0)">Phone Models</a>
-										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Phone Model(s): </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
-									<?php } else if ($_filter->getVar() == 'acc_notebook_color') {
-									?>
-                                        <div class="tshirt-colors-area">
-										<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Color(s): </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
-									<?php } else if ($_filter->getVar() == 'tshirt_color') {
-									?>
-                                        <div class="tshirt-colors-area">
-										<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Tshirt Color(s): </label>
-										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
-                                    <?php }
-									else if ($_filter->getVar() == 'acc_notebook_material') {
-									?>
-                                        <div class="cate-open-close">
-                                        <a class="opener" href="javascript:void(0)">Material</a>
-										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
-									<?php } else if ($_filter->getVar() == 'universal_categories') {
-									?>
-                                        <span>Search By Design: </span>
-                                        <div class="cate-open-close">
-                                        <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
-										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
-                                        <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
-										<?php echo $_filter->getHtml() ?>
+			<label class="styles-lable" id="styles_label">Gender: </label>
+			<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd></div>
+		<?php
+		}
+		else if ($_filter->getVar() == 'styles') {
+		?>
+			<label class="styles-lable" id="styles_label">Styles: </label>
+			<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd>
+		<?php } else if ($_filter->getVar() == 'acc_phone_model') {
+		?>
+            <div class="cate-open-close">
+            <a class="opener" href="javascript:void(0)">Phone Models</a>
+			<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Phone Model(s): </label> -->
+			<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
+		<?php } else if ($_filter->getVar() == 'acc_notebook_color') {
+		?>
+            <div class="tshirt-colors-area">
+			<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Color(s): </label>
+			<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
+		<?php } else if ($_filter->getVar() == 'tshirt_color') {
+		?>
+            <div class="tshirt-colors-area">
+			<label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Tshirt Color(s): </label>
+			<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
+        <?php }
+		else if ($_filter->getVar() == 'acc_notebook_material') {
+		?>
+            <div class="cate-open-close">
+            <a class="opener" href="javascript:void(0)">Material</a>
+			<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
+			<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
+		<?php } else if ($_filter->getVar() == 'universal_categories') {
+		?>
+            <span>Search By Design: </span>
+            <div class="cate-open-close">
+            <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
+			<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
+			<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+            <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
+			<?php echo $_filter->getHtml() ?>
 
-                                        </ul></div>
-									<?php }
-									}
-									endif;?>
-                        <?php endforeach; ?>
+            </ul></div>
+		<?php }
+		}
+		endif;?>
+<?php endforeach; ?>
                         <?php //if ($state[1] AND $this->bNeedClearAll())://disabled clear all option 
                               //if(!($current_category_p_id == '5')){
 ?>
