--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -332,8 +332,8 @@ div.fme-filter dd li { overflow: visible !important; }
 .sort-area .sort-items a { display: block; transform: skewX(-18deg); -moz-transform: skewX(-18deg); -webkit-transform: skewX(-18deg); -ms-transform: skewX(-18deg); width: 35px; height: 30px; text-align: center; background: #ddd; color: #888; font: 16px/30px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .sort-area .sort-items li.active a, .sort-area .sort-items a:hover { text-decoration: none; background: #000; color: #fff; }
 .sort-area .sort-items a span { display: block; transform: skewX(18deg); -moz-transform: skewX(18deg); -webkit-transform: skewX(18deg); -ms-transform: skewX(18deg); }
-.products-grid { margin: 0; padding: 0; list-style: none; width: 102%; letter-spacing: -4px; }
-.products-grid li { display: inline-block; vertical-align: top; width: 47%; margin: 0 3% 30px 0; letter-spacing: normal; }
+.products-grid { margin: 0; padding: 0; list-style: none; width:100%; letter-spacing:0px; clear:both;}
+.products-grid li { display: inline-block; vertical-align: top; width:49%; padding: 0 1% 30px; letter-spacing: normal;}
 .products-grid .image-area { position: relative; text-align: center; display: block; overflow: hidden; }
 .products-grid img { display: block; width: 100%; height: auto; }
 .products-grid .image-area:hover .quick-view { display: block; }
@@ -357,7 +357,9 @@ margin: 0; text-transform: capitalize; color: #222; font: 13px/18px "Roboto Cond
 .products-grid .btn-holder a:first-child:hover { background: none; color: #fff; opacity: 1; border-color: #f16167; }
 .pagination { padding: 10px 0; margin: 0; border-width: 1px 0; border-color: #ddd; border-style: solid; display: block; text-align: center; overflow: hidden; }
 .pagination > li { display: inline-block; vertical-align: top; line-height: 30px; min-width: 20px; }
-.pagination li a { border: 1px solid #ddd; width: 35px; height: 28px; line-height: 28px; font-size: 14px; color: #888; padding: 0; display: block; transform: skewX(-20deg); -moz-transform: skewX(-20deg); -ms-transform: skewX(-20deg); -webkit-transform: skewX(-20deg); }
+.pagination li a { border: 1px solid #ddd; width: 35px; height: 28px; line-height: 28px; font-size: 14px; color: #888; padding: 0;
+display: block; transform: skewX(-20deg); -moz-transform: skewX(-20deg); -ms-transform: skewX(-20deg);
+-webkit-transform: skewX(-20deg);border-radius:0;}
 .pagination li a strong, .pagination li a span { display: block; transform: skewX(20deg); -moz-transform: skewX(20deg); -ms-transform: skewX(20deg); -webkit-transform: skewX(20deg); }
 .pagination a[aria-label="Next"], .pagination a[aria-label="Previous"] { border: none; font-size: 20px; }
 .quickview-holder { overflow: hidden; padding: 0 0 30px; }
@@ -490,8 +492,9 @@ width:49%;display:inline-block;vertical-align:top;}
 .cart-top-area .btn-holder a:first-child:hover { background: none; color: #000; opacity: 1; border-color: #f16167; }
 .cart-top-area { padding-bottom: 10px; padding-top: 10px;border-bottom:3px solid #eee;}
 .cart-table-area table { /*border-top: 3px solid #eee;*/ width: 100%; }
-.cart-table-area th { text-transform: uppercase; color: #000; font: 14px/14px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-.cart-table-area th, .cart-table-area td { padding: 12px 0; text-align: center; }
+.cart-table-area th { text-transform: uppercase; color: #fff; font: 14px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+background-color:#000;border-bottom:1px solid #fff;}
+.cart-table-area th, .cart-table-area td { padding: 12px 5px; text-align: center; }
 .cart-table-area td { position: relative; }
 .sales-order-view .cart-table-area th:before, .cart-table-area td:before { position: absolute; top: 12px; bottom: 12px; left: 0; border-left: 2px solid #f3f3f3; content: ''; }
 .sales-order-view .cart-table-area th:before, .sales-order-view .cart-table-area td:before { top: 0; }
@@ -557,7 +560,7 @@ border-color: #eee; overflow: hidden; padding: 0;width:49%;}
 .cart-bottom-area .btn-holder a:first-child:hover .span1 { background: #f16167; border-color: #f16167; }
 .cart-bottom-area .btn-holder a:first-child:hover { background: none; color: #000; opacity: 1; border-color: #f16167; }
 .tab-links { overflow: hidden; border-bottom: 4px solid #eee; padding: 10px 0 5px; }
-.tab-links .user-name { float: left; padding: 0 10px; text-transform: uppercase; color: #222; font: 12px/19px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.tab-links .user-name { float: left; padding:5px 2px; text-transform: uppercase; color:#222; font: 20px/19px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .tab-links .user-name a { color: #222; }
 .tabset.tabset2 { margin: 0; padding: 0; list-style: none; text-transform: uppercase; font: 12px/17px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .tabset.tabset2 li { float: left; margin: 0 4px 0 0; }
@@ -613,7 +616,7 @@ border-color: #eee; overflow: hidden; padding: 0;width:49%;}
 .tab-content2 .column-content p { margin: 0 0 5px; }
 .tab-content2 p { margin: 0 0 10px; }
 #main h2 { margin: 0 0 10px; text-transform: uppercase; color: #222; font: 34px/36px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-.form-holder { overflow: hidden; border-top: 5px solid #eee; padding: 35px 16px; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.form-holder { overflow: hidden; border-top: 5px solid #eee; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .form-holder .form-frame { float: left; width: 49%; margin: 0 2% 0 0; }
 .form-holder .login-form { width: 100%; display: block; }
 .form-holder h3 { padding: 0 0 5px; margin: 0 0 5px; border-bottom: 2px solid #eee; text-transform: uppercase; color: #000; font: 17px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; }
@@ -1178,6 +1181,7 @@ display:block;}
 .footer_navigation .panel-group .panel .panel-collapse ul{padding-left:0px;margin:0;}
 .footer_navigation .panel-group .panel .panel-collapse ul li a{padding:5px 15px;display:block;border-top:1px solid #ddd;font-size:14px;
 line-height:1.5;text-transform:uppercase;}
+.customer-account .my-account ol{padding-left:15px;}
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
