--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -595,7 +595,8 @@ border-color: #eee; overflow: hidden; padding: 0;width:49%;}
 .tab-content2 .btn-holder a:first-child:hover .span1 { background: #f16167; border-color: #f16167; }
 .tab-content2 .btn-holder a:first-child:hover { background: none; color: #000; opacity: 1; border-color: #f16167; }
 .tab-content2 .welcome-msg { overflow: hidden; border: 2px solid #d7d7d7; padding: 10px 13px; margin: 0 0 40px; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-.my-account .welcome-msg { overflow: hidden; border: 2px solid #d7d7d7; padding: 10px 13px; margin: 0 0 40px; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.my-account .welcome-msg { overflow: hidden; border: 2px solid #d7d7d7; padding:10px 13px;margin:0; color: #000;font-size:16px;
+line-height:1.3;}
 .tab-content2 .welcome-msg h3 { margin: 0 0 10px; border: none; text-align: left; text-transform: uppercase; color: #251709; font: bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .tab-content2 .welcome-msg p { margin: 0; }
 .tab-content2 .dark-heading { margin: 0 0 20px; border-width: 0 0 2px; border-style: solid; border-color: #eee; text-align: left; text-transform: uppercase; color: #fff; font: bold 12px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; position: relative; top: 7px; }
@@ -616,15 +617,16 @@ border-color: #eee; overflow: hidden; padding: 0;width:49%;}
 .tab-content2 .column-content p { margin: 0 0 5px; }
 .tab-content2 p { margin: 0 0 10px; }
 #main h2 { margin: 0 0 10px; text-transform: uppercase; color: #222; font: 34px/36px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-.form-holder { overflow: hidden; border-top: 5px solid #eee; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.form-holder { overflow: hidden;border-top:5px solid #eee;color:#000;font:14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .form-holder .form-frame { float: left; width: 49%; margin: 0 2% 0 0; }
 .form-holder .login-form { width: 100%; display: block; }
 .form-holder h3 { padding: 0 0 5px; margin: 0 0 5px; border-bottom: 2px solid #eee; text-transform: uppercase; color: #000; font: 17px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .form-holder p { margin: 0 0 12px; }
-.form-holder label { display: block; padding: 0; margin: 0 0 3px; text-transform: capitalize; color: #000; font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.form-holder label { display:block;padding:0; margin:0 0 5px;text-transform: capitalize; color: #000;
+font:14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;}
 .form-holder .checkbox-holder { overflow: hidden; margin: 0 0 5px; }
-.form-holder .checkbox-holder input[type="checkbox"] { float: left; margin: 0 5px 0 0; padding: 0; height: 10px; width: 10px; background: #ddd; }
-.form-holder .checkbox-holder label { float: left; margin: 0; font: 10px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.form-holder .checkbox-holder input[type="checkbox"]{float:left;margin:0 5px 0 0;padding:0;height:10px;width:10px;background: #ddd; }
+.form-holder .checkbox-holder label { float: left; margin: 0; font:14px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .form-holder .red { color: #ff0000; }
 .email-form input.email + .red, .checkbox-holder + .red { font-size: 9px; }
 .email-form input[type="text"], .email-form input.email { margin: 0; }
@@ -1153,18 +1155,18 @@ border-color: transparent transparent transparent #000;
 .tab-content .tshirtsize{width: 100% !important;}
 .tab-content .tshirtsize table{border-collapse: collapse;}
 .category-notebooks #fme_filters_list span,
-.category-cases #fme_filters_list span {
-    display: block;
-    margin: 0 0 10px;
-}
+.category-cases #fme_filters_list span {display: block;margin: 0 0 10px;}
 
 .stacktable { width: 100%; }
 .st-head-row { padding-top: 1em; }
 .st-head-row.st-head-row-main {font-size:1.5em; padding-top:0;background-color:#000;color: #fff;line-height:1;margin:0;padding:10px;}
 .st-key { width: 49%; text-align: right; padding-right: 1%; }
 .st-val { width: 49%; padding-left: 1%; }
-.pdc-design-view .buttons{position:relative;top:0;right:0;}
-.pdp-style .carousel-creo.carousel3{width:100%;}
+.pdc-design-view .buttons{position:relative !important;top:0;right:0;}
+.pdp-style .carousel-creo.carousel3{width:100% !important;}
+.pdc-design-area-right{position:relative !important;right:inherit !important;}
+#tools-button li{margin:0;width:auto;display:inline-block;}
+#tools-button li a{padding:4px 8px;}
 .footer_termsconditions {width: 100%; text-align: center; padding:15px 0;background-color:#000;color:#fff;text-transform:uppercase;
 font-size:16px;}
 #footer-accordion{margin-bottom:0;}
@@ -1182,6 +1184,7 @@ display:block;}
 .footer_navigation .panel-group .panel .panel-collapse ul li a{padding:5px 15px;display:block;border-top:1px solid #ddd;font-size:14px;
 line-height:1.5;text-transform:uppercase;}
 .customer-account .my-account ol{padding-left:15px;}
+.my-account address{font-size:1.2em;}
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
