--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1199,7 +1199,7 @@ padding: 5px 8px; margin:0;}
 .customer-account #wishlist-view-form .product-area { border-bottom: 3px solid #ddd; margin-bottom: 10px;}
 .customer-account #wishlist-view-form .product-area .cart-area { width: auto; min-height: 204px; border: none;}
 .customer-account #wishlist-view-form .tab-content2 .alignleft { margin: 0 5px;}
-.customer-account #wishlist-view-form .product-area .edit { color: #ddd; font-size: 14px; position: absolute; right: 340px; top: 61px;}
-.customer-account #wishlist-view-form .product-area .cancel { color: #ddd; font-size: 16px; position: absolute; right: 324px; top: 58px;}
+.customer-account #wishlist-view-form .product-area .edit { color: #ddd; font-size: 14px; position: absolute; left:10px; top: 61px;}
+.customer-account #wishlist-view-form .product-area .cancel { color: #ddd; font-size: 16px; position: absolute; left:30px; top: 58px;}
 .modal-dialog .checkout-cart-index .btn-holder .btn-proceed-checkout { padding: 0px; font-size: 12px;}
 
