--- a/app/design/frontend/creo_mobile/default/template/sales/order/items.phtml
+++ b/app/design/frontend/creo_mobile/default/template/sales/order/items.phtml
@@ -24,11 +24,11 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="">
-<div class="cart-table-area order-details-table col col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="row">
+<div class="order-details-table col-xs-12">
 <?php  $_order = $this->getOrder() ?>
-<table class="data-table linearize-table-large" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
-    
+<table class="cart-table-area linearize-table-large" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
+        <thead>
         <tr>
             <th><?php echo $this->__('Product') ?></th>
             <th><?php echo $this->__('SKU') ?></th>
@@ -36,15 +36,13 @@
             <th class="a-center"><?php echo $this->__('Qty') ?></th>
             <th class="a-right"><?php echo $this->__('Subtotal') ?></th>
         </tr>
-    <tfoot>
-        <?php echo $this->getChildHtml('order_totals') ?>
-    </tfoot>
+        </thead>
+        <tbody>
         <?php $_items = $_order->getItemsCollection(); ?>
         <?php $_index = 0; ?>
             <?php $_count = $_items->count(); ?>
         <?php foreach ($_items as $_item): ?>
         <?php if ($_item->getParentItem()) continue; ?>
-       
             <?php echo $this->getItemHtml($_item) ?>
             <?php if($this->helper('giftmessage/message')->getIsMessagesAvailable('order_item', $_item) && $_item->getGiftMessageId()): ?>
             <tr class="border<?php echo ($_index++ > $_count ?' last':'') ?>" id="order-item-gift-message-<?php echo $_item->getId() ?>" style="display:none;">
@@ -58,8 +56,10 @@
                     </dl>
                 </td>
             </tr>
+            </tbody>
             <?php endif ?>
         <?php endforeach; ?>
+        <tfoot><?php echo $this->getChildHtml('order_totals') ?></tfoot>
 </table>
 <script type="text/javascript">decorateTable('my-orders-table', {'tbody' : ['odd', 'even'], 'tbody tr' : ['first', 'last']})</script>
 </div>
