--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1193,3 +1193,9 @@ line-height:1.5;text-transform:uppercase;}
 .stacktable.large-only { display: none; }
 .stacktable.small-only { display: table; }
 }
+#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_20.selected {
+	background-image: url("http://www.creoroom.com/media/attributeswatches/v-neck-active.png") !important;  	}
+#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_21.selected {
+	background-image: url("http://www.creoroom.com/media/attributeswatches/round-neck-active.png")!important;	}
+#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_22.selected {
+	background-image: url("http://www.creoroom.com/media/attributeswatches/tank-top-active.png")!important;	}
