cart page, responsive table,

--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1200,3 +1200,62 @@ line-height:1.5;text-transform:uppercase;}
 	background-image: url("http://www.creoroom.com/media/attributeswatches/round-neck-active.png")!important;	}
 #product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_22.selected {
 	background-image: url("http://www.creoroom.com/media/attributeswatches/tank-top-active.png")!important;	}
+	
+	/* Force table to not be like tables anymore */
+	.cartPage_custome_responsive table, .cartPage_custome_responsive thead, .cartPage_custome_responsive tbody, .cartPage_custome_responsive th, .cartPage_custome_responsive td, .cartPage_custome_responsive tr { 
+	display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	.cartPage_custome_responsive thead tr { 
+	position: absolute;
+	top: -9999px;
+	left: -9999px;
+	}
+	
+	.cartPage_custome_responsive tr { border: 1px solid #ccc; }
+	
+	.cartPage_custome_responsive td { 
+	/* Behave  like a "row" */
+	border: none;
+	border-top: 1px solid #eee; 
+	position: relative;
+	
+	}
+	.cartPage_custome_responsive td.product-cart-actions { /*padding-left: 50%;*/ }
+	.cartPage_custome_responsive td.product-cart-image, .cartPage_custome_responsive td.cart-footer-actions  { padding-left: 0;}
+	.cartPage_custome_responsive td { padding-left: 50%; }
+	.cartPage_custome_responsive td:before { 
+	/* Now like a table header */
+	position: absolute;
+	/* Top/left values mimic padding */
+	top: 6px;
+	left: 6px;
+	width: 45%; 
+	padding-right: 10px; 
+	white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	.cartPage_custome_responsive td:nth-of-type(1):before { content: "";  }
+	.cartPage_custome_responsive td:nth-of-type(2):before { content: "Unite Price"; margin-top: 10px; }
+	.cartPage_custome_responsive td:nth-of-type(3):before { content: " Size"; margin-top: 10px; }
+	.cartPage_custome_responsive td:nth-of-type(4):before { content: "Quantity"; margin-top: 10px;}
+	.cartPage_custome_responsive td:nth-of-type(5):before { content: "Subtotal    "; margin-top: 10px;}
+	
+	.cartPage_custome_responsive .qty-area { height: 22px;}
+	.cartPage_custome_responsive .cart-btn-area td { padding-left: 0;}
+	.cartPage_custome_responsive tfoot { display: inline-block; width: 100%;}
+	.cartPage_custome_responsive .product-name { float: left; width: 100%; background: none; color: #000;}
+	.cartPage_custome_responsive .product-name a { color: #000;}
+	.cartPage_custome_responsive .text-area .product-image { display: inline-block; float: none;}
+	.cartPage_custome_responsive .edititem { position: absolute; right: 10px; top: 10px;}
+	.cartPage_custome_responsive .btn-remove { position: absolute; right: 35px; top: 10px;}
+	.cartPage_custome_responsive .item-options { display: inline-block !important; float: none; width: 100% !important;}
+	
+	.cartPage_custome_responsive .item-options dt { width: 45%; text-align: right; padding-right: 5%;}
+	.cartPage_custome_responsive .item-options dd { width: 45%; text-align: left; padding-left: 5%;}
+	.cartPage_custome_responsive .sales-order-view .cart-table-area th:before, .cart-table-area td:before { border: 0 !important;}
+	
