--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
@@ -359,12 +359,12 @@ endforeach;
 
 </li>
 -->
+<?php /* ?>
 <li class="create_li" <?php if ((strpos(Mage::helper('core/url')->getCurrentUrl(), 'create.html') == true || strpos(Mage::helper('core/url')->getCurrentUrl(), '/create/') == true) && strpos(Mage::helper('core/url')->getCurrentUrl(), '/account/') == false) {
                     echo'class="active"';
                 } ?>><a href="<?php echo Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">DESIGN YOUR OWN</a></li>
-                
-                
-		<?php
+<?php */ ?>
+	<?php
 		$sessionCustomer = Mage::getSingleton("customer/session");
         if($sessionCustomer->isLoggedIn()) {
         ?>
