--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1104,9 +1104,9 @@ padding: 5px 8px; margin:0;}
 
 .products-grid { z-index: 9; position: relative;}
 #product-gallery-container .bx-wrapper ul.slides li { width:auto !important;}
-#product-options-wrapper { float: left; width: 75%;}
+#product-options-wrapper { float:none; width:100%;}
 #product-options-wrapper .product-swatches-container ul.has-swatches li a { margin-top: 0 !important; padding-top: !important; height: 25px; width: 25px; line-height: 25px; background-position: 50% 50%;}
-.attributeItem { float: left; width:50%;}
+.attributeItem {width:49%;display:inline-block;vertical-align:top;}
 .catalog-product-view .bx-controls.bx-has-controls-direction { display: none;}
 .bx-wrapper  { background: #fff none repeat scroll 0 0;
     border: 0px solid #fff !important;
