--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -130,7 +130,7 @@ position:absolute;border-radius:0;left:5px;}
 body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
 #nav:after { display: block; content: ''; clear: both; }
 #nav ol { margin: 0; padding: 0; list-style: none;/*	letter-spacing: -1px;*/ text-transform: uppercase; font: 15px/21px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-#nav ol > li { display: block; margin: 0; }
+#nav ol > li { display: block; margin: 0;border-bottom:1px solid #333;}
 #nav ol > li > a { display: block; padding:10px 20px; position: relative;font-size:17px; }
 #nav ol > li a:hover { text-decoration: none;color:#fff;background-color:#333;}
 #nav ol > li.active .drop{display: block;}
@@ -1075,10 +1075,6 @@ border-color: transparent transparent transparent #000;
     top: 0;
     width: 0;
 }
-@media print {
-.page-print .subtitle { margin-bottom: 99px; }
-.page-print .buttons-set button { display: none; }
-}
 
 /*creo mobile styling*/
 .homepage_navigation_middle{padding: 0;}
@@ -1194,87 +1190,79 @@ background-image: url("http://www.creoroom.com/media/attributeswatches/v-neck-ac
 #product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_21.selected {
 background-image: url("http://www.creoroom.com/media/attributeswatches/round-neck-active.png")!important;	}
 #product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_22.selected {
-background-image: url("http://www.creoroom.com/media/attributeswatches/tank-top-active.png")!important;
+background-image: url("http://www.creoroom.com/media/attributeswatches/tank-top-active.png")!important;	}
+
+/* Force table to not be like tables anymore */
+.cartPage_custome_responsive table, .cartPage_custome_responsive thead, .cartPage_custome_responsive tbody, .cartPage_custome_responsive th, .cartPage_custome_responsive td, .cartPage_custome_responsive tr { 
+display: block; 
 }
+
+/* Hide table headers (but not display: none;, for accessibility) */
+.cartPage_custome_responsive thead tr { 
+position: absolute;
+top: -9999px;
+left: -9999px;
+}
+
+.cartPage_custome_responsive tr { border: 1px solid #ccc; }
+
+.cartPage_custome_responsive td { 
+/* Behave  like a "row" */
+border: none;
+border-top: 1px solid #eee; 
+position: relative;
+
+}
+.cartPage_custome_responsive td.product-cart-actions { /*padding-left: 50%;*/ }
+.cartPage_custome_responsive td.product-cart-image, .cartPage_custome_responsive td.cart-footer-actions  { padding-left: 0;}
+.cartPage_custome_responsive td { padding-left: 50%; }
+.cartPage_custome_responsive td:before { 
+/* Now like a table header */
+position: absolute;
+/* Top/left values mimic padding */
+top: 6px;
+left: 6px;
+width: 45%; 
+padding-right: 10px; 
+white-space: nowrap;
+}
+
+/*
+Label the data
+*/
+.cartPage_custome_responsive td:nth-of-type(1):before { content: "";  }
+.cartPage_custome_responsive td:nth-of-type(2):before { content: "Unite Price"; margin-top: 10px; }
+.cartPage_custome_responsive td:nth-of-type(3):before { content: " Size"; margin-top: 10px; }
+.cartPage_custome_responsive td:nth-of-type(4):before { content: "Quantity"; margin-top: 10px;}
+.cartPage_custome_responsive td:nth-of-type(5):before { content: "Subtotal    "; margin-top: 10px;}
+
+.cartPage_custome_responsive .qty-area { height: 22px;}
+.cartPage_custome_responsive .cart-btn-area td { padding-left: 0;}
+.cartPage_custome_responsive tfoot { display: inline-block; width: 100%;}
+.cartPage_custome_responsive .product-name { float: left; width: 100%; background: none; color: #000;}
+.cartPage_custome_responsive .product-name a { color: #000;}
+.cartPage_custome_responsive .text-area .product-image { display: inline-block; float: none;}
+.cartPage_custome_responsive .edititem { position: absolute; right: 10px; top: 10px;}
+.cartPage_custome_responsive .btn-remove { position: absolute; right: 35px; top: 10px;}
+.cartPage_custome_responsive .item-options { display: inline-block !important; float: none; width: 100% !important;}
+
+.cartPage_custome_responsive .item-options dt { width: 45%; text-align: right; padding-right: 5%;}
+.cartPage_custome_responsive .item-options dd { width: 45%; text-align: left; padding-left: 5%;}
+.cartPage_custome_responsive .sales-order-view .cart-table-area th:before, .cart-table-area td:before { border: 0 !important;}
+
 
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
 .stacktable.small-only{display:none;}
-
+@media print {
+.page-print .subtitle { margin-bottom: 99px; }
+.page-print .buttons-set button { display: none; }
+}
 @media (max-width: 800px) {
 .stacktable.large-only { display: none; }
 .stacktable.small-only { display: table; }
 }
-
-#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_20.selected {
-	background-image: url("http://www.creoroom.com/media/attributeswatches/v-neck-active.png") !important;  	}
-#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_21.selected {
-	background-image: url("http://www.creoroom.com/media/attributeswatches/round-neck-active.png")!important;	}
-#product-options-wrapper .product-swatches-container ul#swatches-options-134 li a#swatches_option_value_22.selected {
-	background-image: url("http://www.creoroom.com/media/attributeswatches/tank-top-active.png")!important;	}
-	
-	/* Force table to not be like tables anymore */
-	.cartPage_custome_responsive table, .cartPage_custome_responsive thead, .cartPage_custome_responsive tbody, .cartPage_custome_responsive th, .cartPage_custome_responsive td, .cartPage_custome_responsive tr { 
-	display: block; 
-	}
-	
-	/* Hide table headers (but not display: none;, for accessibility) */
-	.cartPage_custome_responsive thead tr { 
-	position: absolute;
-	top: -9999px;
-	left: -9999px;
-	}
-	
-	.cartPage_custome_responsive tr { border: 1px solid #ccc; }
-	
-	.cartPage_custome_responsive td { 
-	/* Behave  like a "row" */
-	border: none;
-	border-top: 1px solid #eee; 
-	position: relative;
-	
-	}
-	.cartPage_custome_responsive td.product-cart-actions { /*padding-left: 50%;*/ }
-	.cartPage_custome_responsive td.product-cart-image, .cartPage_custome_responsive td.cart-footer-actions  { padding-left: 0;}
-	.cartPage_custome_responsive td { padding-left: 50%; }
-	.cartPage_custome_responsive td:before { 
-	/* Now like a table header */
-	position: absolute;
-	/* Top/left values mimic padding */
-	top: 6px;
-	left: 6px;
-	width: 45%; 
-	padding-right: 10px; 
-	white-space: nowrap;
-	}
-	
-	/*
-	Label the data
-	*/
-	.cartPage_custome_responsive td:nth-of-type(1):before { content: "";  }
-	.cartPage_custome_responsive td:nth-of-type(2):before { content: "Unite Price"; margin-top: 10px; }
-	.cartPage_custome_responsive td:nth-of-type(3):before { content: " Size"; margin-top: 10px; }
-	.cartPage_custome_responsive td:nth-of-type(4):before { content: "Quantity"; margin-top: 10px;}
-	.cartPage_custome_responsive td:nth-of-type(5):before { content: "Subtotal    "; margin-top: 10px;}
-	
-	.cartPage_custome_responsive .qty-area { height: 22px;}
-	.cartPage_custome_responsive .cart-btn-area td { padding-left: 0;}
-	.cartPage_custome_responsive tfoot { display: inline-block; width: 100%;}
-	.cartPage_custome_responsive .product-name { float: left; width: 100%; background: none; color: #000;}
-	.cartPage_custome_responsive .product-name a { color: #000;}
-	.cartPage_custome_responsive .text-area .product-image { display: inline-block; float: none;}
-	.cartPage_custome_responsive .edititem { position: absolute; right: 10px; top: 10px;}
-	.cartPage_custome_responsive .btn-remove { position: absolute; right: 35px; top: 10px;}
-	.cartPage_custome_responsive .item-options { display: inline-block !important; float: none; width: 100% !important;}
-	
-	.cartPage_custome_responsive .item-options dt { width: 45%; text-align: right; padding-right: 5%;}
-	.cartPage_custome_responsive .item-options dd { width: 45%; text-align: left; padding-left: 5%;}
-	.cartPage_custome_responsive .sales-order-view .cart-table-area th:before, .cart-table-area td:before { border: 0 !important;}
-	
-
-
 @media (max-width:359px){
-.products-grid .btn-holder a{font-size:10px;}
+.products-grid .btn-holder a,.form-holder .submit-holder button{font-size:10px;}
 .products-grid .text-area .price,.products-grid .text-area h3{font-size:11px;}
 }
-
