css and table fixes

--- a/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
@@ -55,8 +55,8 @@
   <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
     <?php echo $this->getBlockHtml('formkey'); ?>
     <div class="row">
-      <div class="cart-table-area col col-lg-12 col-md-12 col-sm-12 col-xs-12 cartPage_custome_responsive">
-        <table id="shopping-cart-table" class="cart-table data-table">
+      <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 cartPage_custome_responsive">
+        <table id="shopping-cart-table" class="cart-table">
           <col width="1" />
       <col width="1" />
       <col width="1" />
