--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onestepcheckout.phtml
@@ -106,7 +106,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 }
 //]]>
 </script>
-<div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl(); ?>images/FME/ajax-loader.gif" /></div>
+<div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl('images/FME/ajax-loader.gif'); ?>" /></div>
 <style>
         .fme_loading_filters {
             background-color: #d8d8d8;
