--- a/app/design/frontend/creo_mobile/default/template/catalog/product/view - Copy.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/product/view - Copy.phtml
@@ -382,7 +382,7 @@
             </div>
         </div>
     </div>   
-    <div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl(); ?>images/FME/ajax-loader.gif" /></div>
+    <div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl('images/FME/ajax-loader.gif'); ?>" /></div>
     <style>
         .fme_loading_filters {
             background-color: #d8d8d8;
