--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -751,17 +751,17 @@ padding: 5px 8px; margin:0;}
 .onestepcheckout-index-index .discount-form .leftSide label, .onestepcheckout-index-index .discount-form .leftSide input { float: left; width:100%; text-align:left;}
 .onestepcheckout-index-index .discount-form .buttons-set { float: right; width:45%;}
 .onestepcheckout-index-index .discount-form .buttons-set button {background: #000 none repeat scroll 0 0;
-                                                                 border: medium none;
-                                                                 color: #fff;
-                                                                 display: block;
-                                                                 font-size: 12px;
-                                                                 font-weight: normal;
-                                                                 line-height: 1.3;
-                                                                 padding: 4px 20px;
-                                                                 text-align: center;
-                                                                 text-decoration: none;
-                                                                 width: 100%; 
-                                                                 margin: 20px 0 0 0;
+ border: medium none;
+ color: #fff;
+ display: block;
+ font-size: 12px;
+ font-weight: normal;
+ line-height: 1.3;
+ padding: 4px 12px;
+ text-align: center;
+ text-decoration: none;
+ width: 100%; 
+ margin: 20px 0 0 0;
 }
 #review-buttons-container { display: inline-block; width: 100%;}
 #review-buttons-container button {
@@ -770,7 +770,7 @@ padding: 5px 8px; margin:0;}
     font-size: 16px;
     font-weight: bold;
     height: auto;
-    padding: 5px 100px;
+    padding: 5px 20px;
     width:100%;
     float: none;
     margin-top:0px;
@@ -1203,3 +1203,11 @@ padding: 5px 8px; margin:0;}
 .customer-account #wishlist-view-form .product-area .cancel { color: #ddd; font-size: 16px; position: absolute; left:30px; top: 58px;}
 .modal-dialog .checkout-cart-index .btn-holder .btn-proceed-checkout { padding: 0px; font-size: 12px;}
 
+@media (max-width:359px){
+.cart-btn-area .btn-holder .button2,
+.checkout-cart-index .btn-holder .btn-proceed-checkout,
+.cart-top-area .btn-holder a:first-child,
+.cart-bottom-area .btn-holder a:first-child{font-size:10px;}
+.onestepcheckout-index-index .checkout_bottom_area .total .title{font-size: 12px;}
+.onestepcheckout-index-index .checkout_bottom_area .total span{font-size: 12px !important;}
+}
