creo mobile template updates

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -13,7 +13,7 @@ if ($this->getRequest()->getControllerName() != 'result') {
 
 if ('front' != Mage::app()->getRequest()->getControllerName()) {
     ?>
-    <script type="text/javascript" src="<?php echo $this->getSkinUrl(); ?>js/FME/fme_layered_nav.js"></script> 
+    <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/FME/fme_layered_nav.js'); ?>"></script> 
     <?php
 }
 ?>
@@ -144,7 +144,6 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                             //console.log(cat_attrs);
                             });
                         </script>
-
                         <?php $_filters = $this->getFilters();
                         ?>
                         <?php // $_filters = array_reverse($_filters); ?>
@@ -261,8 +260,4 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
     <?php
 }
 
-
 ?>
-
-
-
