--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1203,6 +1203,19 @@ padding: 5px 8px; margin:0;}
 .customer-account #wishlist-view-form .product-area .cancel { color: #ddd; font-size: 16px; position: absolute; left:30px; top: 58px;}
 .modal-dialog .checkout-cart-index .btn-holder .btn-proceed-checkout { padding: 0px; font-size: 12px;}
 
+a[class*='_selected_']{
+    color: #fff !important;
+	background: #000;
+}
+._selected_{
+    color: #fff !important;
+	background: #000;
+}
+.dont_click_it {
+   pointer-events: none;
+   cursor: default;
+}
+
 @media (max-width:359px){
 .cart-btn-area .btn-holder .button2,
 .checkout-cart-index .btn-holder .btn-proceed-checkout,
