--- a/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
@@ -134,3 +134,45 @@ jQuery( document ).ready( function($){
 		});
 		}
 </script>
+<script>
+jQuery(window).load(function(){
+    //jQuery('#currentvalue').text('View All');
+    var url = window.location.href;
+    var array = url.split('?');
+    var paramStr = array[1];
+    var params = paramStr.split("universal_categories=");
+    console.log(params);
+    var design = getQueryVar('universal_categories').trim();
+    if(design) {
+        console.log('here1'+design);
+        var currentEl = jQuery("#universal_categories-"+design).text();
+        if(currentEl) {
+            $('currentvalue').replace('<a href="#" class="opener" id="currentvalue">'+currentEl+'</a>');
+        }
+    }
+    //var search2 = getQueryVar('design').toLowerCase();
+    //console.log(search2);
+    //location.href.replace("design="+design, "design=3araby");
+//    var index = cat_attrs.indexOf(design);
+//    console.log(cat_attrs[index]);
+//    console.log(index);
+//    console.log(cat_attrs);
+//    var nthChild = index+1;
+//    //alert(nthChild);
+//    //setTimeout(function() {
+//    if(changeFrom.indexOf("view all") <= -1) {
+//        var target = jQuery('#fme_layered_universal_categories li:nth-child('+nthChild+')').find('a');
+//        //jQuery(target).simulate('click');
+//        console.log("tar:"+target.text());
+//        //ensure that current one is selected as well
+//    }
+}); 
+/*setTimeout(function(){
+    //alert("test");
+    var currentval = jQuery('#currentvalue').text().trim();
+    if(currentval == "") {
+        jQuery('#currentvalue').text('View All');
+    }
+    console.log("test");
+}, 1170);*/
+</script>
